--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Scott C
 
 # Short bio or description (displayed in the header)
-description: Software Developer in the Desert
+description: How many words fit up here anyway? Is this too much?
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
